# fretboarder

./: .gitignore  Cairo.hs  CairoExt.hs  Color.hs  Colors.hs  Fretboard.hs  HsExt.hs  INote.hs  Intervals.hs  Main.hs  Makefile  Note.hs  Parser.hs  Scale.hs  fretboarder.cabal  license.txt  readme.txt
src/: ASCII.hs  CommandLine.hs  GTK.hs  GUI.hs  ImgFile.hs  Makefile  Tests.hs
src/Extensions/: List.hs  Tuple.hs
src/Fretboarder/: Fretboard.hs  Parser.hs  Utility.hs
src/Fretboarder/Applications/: CommandLine.hs  GUI.hs
src/Fretboarder/CommandLine/: Main.hs
src/Fretboarder/Drawing/: ASCII.hs  Backend.hs  Cairo.hs  CairoExt.hs  Color.hs  Expr.hs  Helper.hs  Rasterific.hs
src/Fretboarder/Extensions/: HsExt.hs  List.hs  Tuple.hs
src/Fretboarder/Guitar/: Diatonic.hs  Fretboard.hs  INote.hs  Interval.hs  Intervals.hs  Note.hs  Offset.hs  Scale.hs  ScaleConversion.hs
src/Fretboarder/Music/: Diatonic.hs  Fretboard.hs  INote.hs  Note.hs  Offset.hs  RootedScale.hs  SPN.hs  Scale.hs  Semitone.hs  Western.hs
src/Fretboarder/Parser/: Expr.hs  Lexer.x  Parser.hs  Parser.y  String.hs  parser.y
src/Fretboarder/Test/: Tests.hs
test/: Tests.hs
tests/: Main.hs
