name: fretboarder
version: 0.1.0.0
synopsis: Drawing scales and chord notes on the guitar neck
description: Program for drawing scales and chords on the guitar neck
license: PublicDomain
author: daoo
maintainer: daoo
build-type: Simple
cabal-version: >=1.18

library
  exposed-modules:
    Fretboarder.Drawing.ASCII
    Fretboarder.Drawing.Expr
    Fretboarder.Drawing.Rasterific
    Fretboarder.Fretboard
    Fretboarder.Parser
  build-depends:
    JuicyPixels,
    Rasterific,
    attoparsec,
    bytestring,
    base,
    musictheory,
    text
  hs-source-dirs: src
  default-language: Haskell2010

executable fretboarder-ascii
  main-is: src/ASCII.hs
  build-depends: base, fretboarder, bytestring
  default-language: Haskell2010

executable fretboarder-img
  main-is: src/ImgFile.hs
  build-depends: base, fretboarder, JuicyPixels
  default-language: Haskell2010
